<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ishitasinha.moviesapp.SearchActivity"
    tools:showIn="@layout/activity_search">

    <RadioGroup
        android:id="@+id/search_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin">

        <RadioButton
            android:id="@+id/search_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_actor" />

        <RadioButton
            android:id="@+id/search_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_movie" />

        <RadioButton
            android:id="@+id/search_movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_year" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_prompt"
            android:visibility="gone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/action_search"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout>
